--- a/ros2_amr/package.xml
+++ b/ros2_amr/package.xml
@@ -11,8 +11,13 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  
+  <test_depend>rclcpp</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
+    <nav2_core plugin="${prefix}/behavior_plugin.xml" />
   </export>
+ 
 </package>
+
